--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>FEM - Never out of stock</title>
+    <title>NoS - Never out of stock</title>
   </head>
   <body>
     <noscript>
